--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,40 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 16/06/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">12 - 89 - 1 - 70 - 8</p>
-                <p class="machine">45 - 25 - 43 - 84 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">77 - 10 - 75 - 35 - 65</p>
-                <p class="machine">21 - 60 - 72 - 48 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">1 - 54 - 84 - 3 - 86</p>
-                <p class="machine">8 - 19 - 21 - 5 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">10 - 45 - 62 - 49 - 11</p>
-                <p class="machine">52 - 54 - 87 - 89 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">87 - 15 - 27 - 50 - 48</p>
-                <p class="machine">20 - 62 - 60 - 80 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">18 - 63 - 46 - 47 - 86</p>
-                <p class="machine">2 - 43 - 78 - 89 - 29</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">Monday 17/06/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -266,12 +232,46 @@
                 <p class="winning">10 - 66 - 5 - 45 - 65</p>
                 <p class="machine">85 - 29 - 90 - 44 - 37</p>        
             </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
         </section>
+
+        <section aria-label="today result">
+        <h2 class="date">tuesday 18/06/2024</h2>
+        <article>
+            <h3 class="game">Gold</h3>
+            <p class="winning">21 - 9 - 14 - 50 - 19</p>
+            <p class="machine">63 - 23 - 13 - 17 - 28</p>        
+        </article>
+        <article>
+            <h3 class="game">06</h3>
+            <p class="winning">70 - 22 - 68 - 34 - 59</p>
+            <p class="machine">35 - 30 - 80 - 57 - 84</p>        
+        </article>
+        <article>
+            <h3 class="game">Jackpot</h3>
+            <p class="winning">10 - 28 - 45 - 47 - 67</p>
+            <p class="machine">23 - 55 - 1 - 75 - 65</p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+    </section>
     </div>
     
     <div class="gameList">
