--- a/index.html
+++ b/index.html
@@ -99,21 +99,15 @@
                 </div> 
             </nav>
         </header>
-        <!-- <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 310px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
+        <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 310px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
             <aside class="review" style="text-align: center; line-height: 1.5;" >
                 <h1>Review</h1>
                 <p style="font-size: 18px;">Kindly take few seconds of your time to rate our content</p>
                 <a class="google-review-link" href="https://g.page/r/CcKUCr5g5b_JEBI/review" target="_blank" style="color: #ff0000b5; font-size: 22px;" >Click here to Review  <i class="fa-solid fa-star-half-stroke"></i></a>
             </aside>
-        </div> -->
+        </div>
         
         <a href="#" id="top" aria-label="scroll up"><i class="fa-solid fa-arrow-up"></i></a>
-
-        <aside style=" display: block; max-width: 800px; min-width: 250px; margin: 0 auto 20px; padding: 10px; background-color: #ff0000; font-weight: bold; font-size: 1.1em;" aria-label="information" >
-            <i class="fa-solid fa-circle-info" style="font-size: 30px; color: #fff; margin: 0 0 10px 10px; font-weight: bold;"></i>
-            <span style="color: #fff; margin-left: 5px; font-weight: bold;">Public Holiday on Monday, June 17, 2024</span> <br>
-            <small style="color: #fff; margin-left: 20px; "><b>Monday Special</b> will not be drawn on Monday, June 17, 2024. It will be drawn on Tuesday , June 18, 2024</small>
-        </aside>
 
                 <!-- main -->
         <main>
