--- a/plan.html
+++ b/plan.html
@@ -258,7 +258,7 @@
             <a href="/" class="home">Home</a>
         </nav>
     </header>
-    <main>
+    <!-- <main>
         <p>Event to try on International tonight 17/06/2024</p>
         <div>
             <p>Twitter Post</p>
@@ -269,7 +269,7 @@
         <div style="margin-top: 5rem;">
             <p>facebook Post</p>
             <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2FvisuaLottoBoard%2Fposts%2Fpfbid05hRDaiu8AMZMbmPjpRuEHj1jDD5Pb3aZJnoASMpvcYT4ENFmbHdNUQQhjN3YJCM1l&show_text=true&width=500" width="500" height="695" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-        </div>
+        </div> -->
 
 
         <!-- <aside class="facebook-embed" style="margin: 100rem auto;"> -->
@@ -284,11 +284,11 @@
         <!-- <div>
             
         </div> -->
-        <!-- <h1>Please Check Back Some Few Time</h1>
+        <h1>Please Check Back Some Few Time</h1>
         <h2>All Plans have been closed</h2>
         <p>Nothing To Show Now. 
             <i>But if you have a recent plan you are following through this "PLAN PAGE" and you want us to reopen it, tell us through any of our social media handles</i>
-        </p>    -->
+        </p>  
 
 
         <!-- <h2>Welcome to Plan Page</h2> -->
