--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -252,24 +252,24 @@
             <p class="machine">23 - 55 - 1 - 75 - 65</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
+            <h3 class="game">Club Master</h3>
+            <p class="winning">85 - 84 - 89 - 80 - 43</p>
+            <p class="machine">42 - 45 - 36 - 83 - 35</p>        
+        </article>
+        <article>
+            <h3 class="game">LUCKY-G</h3>
+            <p class="winning">66 - 85 - 47 - 65 - 13</p>
             <p class="machine"></p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
+            <h3 class="game">MSP</h3>
+            <p class="winning">71 - 60 - 81 - 12 - 24</p>
             <p class="machine"></p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
-        </article>
-        <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">Super</h3>
+            <p class="winning">70 - 40 - 58 - 1 - 66</p>
+            <p class="machine">24 - 88 - 32 - 21 - 76</p>        
         </article>
     </section>
     </div>
