corrected tota result

--- a/GAMES/11Tota.html
+++ b/GAMES/11Tota.html
@@ -1724,18 +1724,18 @@
                     <td class="days"><small>Jun 17th mon</small></td>
                 
                     <!-- winning-->
-                    <td class="winning">56</td>
-                    <td class="winning">80</td>
-                    <td class="winning">17</td>
-                    <td class="winning">22</td>
-                    <td class="winning" id="lbw">65</td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning" id="lbw"></td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm">3</td>
-                    <td class="machine">30</td>
-                    <td class="machine">55</td>
-                    <td class="machine">40</td>
-                    <td class="machine" id="lbm">51</td>
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
                 </tr>
             </tbody> 
 
