--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -272,6 +272,40 @@
             <p class="machine">24 - 88 - 32 - 21 - 76</p>        
         </article>
     </section>
+
+    <section aria-label="today result">
+        <h2 class="date">wednesday 19/06/2024</h2>
+        <article>
+            <h3 class="game">Tota</h3>
+            <p class="winning">76 - 57 - 19 - 29 - 81</p>
+            <p class="machine">61 - 51 - 49 - 53 - 78</p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+    </section>
     </div>
     
     <div class="gameList">
