--- a/GAMES/11Tota.html
+++ b/GAMES/11Tota.html
@@ -1721,21 +1721,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">49</td>
-                    <td class="days"><small>Jun 17th mon</small></td>
+                    <td class="days"><small>Jun 19th wed</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">76</td>
+                    <td class="winning">57</td>
+                    <td class="winning">19</td>
+                    <td class="winning">29</td>
+                    <td class="winning" id="lbw">81</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">61</td>
+                    <td class="machine">51</td>
+                    <td class="machine">49</td>
+                    <td class="machine">53</td>
+                    <td class="machine" id="lbm">78</td>
                 </tr>
             </tbody> 
 
