--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -206,35 +206,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">Monday 17/06/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">12 - 18 - 28 - 31 - 13</p>
-                <p class="machine">65 - 47 - 75 - 83 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">67 - 33 - 80 - 76 - 2</p>
-                <p class="machine">60 - 26 - 90 - 69 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">56 - 80 - 17 - 22 - 65</p>
-                <p class="machine">3 - 30 - 55 - 40 - 51</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">68 - 9 - 53 - 48 - 51</p>
-                <p class="machine">22 - 59 - 27 - 49 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">10 - 66 - 5 - 45 - 65</p>
-                <p class="machine">85 - 29 - 90 - 44 - 37</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
         <h2 class="date">tuesday 18/06/2024</h2>
         <article>
             <h3 class="game">Gold</h3>
@@ -259,7 +230,7 @@
         <article>
             <h3 class="game">LUCKY-G</h3>
             <p class="winning">66 - 85 - 47 - 65 - 13</p>
-            <p class="machine"></p>        
+            <p class="machine">29 - 69 - 35 - 15 - 30</p>        
         </article>
         <article>
             <h3 class="game">MSP</h3>
@@ -281,14 +252,14 @@
             <p class="machine">61 - 51 - 49 - 53 - 78</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">mark ii</h3>
+            <p class="winning">84 - 55 - 25 - 58 - 8</p>
+            <p class="machine">3 - 9 - 20 - 10 - 65</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">vag</h3>
+            <p class="winning">31 - 86 - 88 - 45 - 50</p>
+            <p class="machine">34 - 24 - 36 - 67 - 13</p>        
         </article>
         <article>
             <h3 class="game"></h3>
