--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -897,11 +897,11 @@
                     <td class="winning" id="lbw">13</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">29</td>
+                    <td class="machine">69</td>
+                    <td class="machine">35</td>
+                    <td class="machine">15</td>
+                    <td class="machine" id="lbm">30</td>
                 </tr>
             </tbody> 
 
