result JUNE 20/Thursday/2024

--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -896,11 +896,11 @@
                     <td class="winning" id="lbw">23</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">55</td>
+                    <td class="machine">68</td>
+                    <td class="machine">78</td>
+                    <td class="machine">86</td>
+                    <td class="machine" id="lbm">82</td>
                 </tr>
             </tbody> 
 
