--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -197,77 +197,72 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-        <h2 class="date">tuesday 18/06/2024</h2>
-        <article>
-            <h3 class="game">Gold</h3>
-            <p class="winning">21 - 9 - 14 - 50 - 19</p>
-            <p class="machine">63 - 23 - 13 - 17 - 28</p>        
-        </article>
-        <article>
-            <h3 class="game">06</h3>
-            <p class="winning">70 - 22 - 68 - 34 - 59</p>
-            <p class="machine">35 - 30 - 80 - 57 - 84</p>        
-        </article>
-        <article>
-            <h3 class="game">Jackpot</h3>
-            <p class="winning">10 - 28 - 45 - 47 - 67</p>
-            <p class="machine">23 - 55 - 1 - 75 - 65</p>        
-        </article>
-        <article>
-            <h3 class="game">Club Master</h3>
-            <p class="winning">85 - 84 - 89 - 80 - 43</p>
-            <p class="machine">42 - 45 - 36 - 83 - 35</p>        
-        </article>
-        <article>
-            <h3 class="game">LUCKY-G</h3>
-            <p class="winning">66 - 85 - 47 - 65 - 13</p>
-            <p class="machine">29 - 69 - 35 - 15 - 30</p>        
-        </article>
-        <article>
-            <h3 class="game">MSP</h3>
-            <p class="winning">71 - 60 - 81 - 12 - 24</p>
-            <p class="machine"></p>        
-        </article>
-        <article>
-            <h3 class="game">Super</h3>
-            <p class="winning">70 - 40 - 58 - 1 - 66</p>
-            <p class="machine">24 - 88 - 32 - 21 - 76</p>        
-        </article>
-    </section>
+            <h2 class="date">wednesday 19/06/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">76 - 57 - 19 - 29 - 81</p>
+                <p class="machine">61 - 51 - 49 - 53 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">84 - 55 - 25 - 58 - 8</p>
+                <p class="machine">3 - 9 - 20 - 10 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">31 - 86 - 88 - 45 - 50</p>
+                <p class="machine">34 - 24 - 36 - 67 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">49 - 87 - 63 - 51 - 35</p>
+                <p class="machine">76 - 11 - 25 - 81 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">83 - 57 - 11 - 44 - 23</p>
+                <p class="machine">55 - 68 - 78 - 86 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">9 - 45 - 15 - 59 - 47</p>
+                <p class="machine">11 - 3 - 73 - 56 - 32</p>        
+            </article>
+        </section>
 
-    <section aria-label="today result">
-        <h2 class="date">wednesday 19/06/2024</h2>
-        <article>
-            <h3 class="game">Tota</h3>
-            <p class="winning">76 - 57 - 19 - 29 - 81</p>
-            <p class="machine">61 - 51 - 49 - 53 - 78</p>        
-        </article>
-        <article>
-            <h3 class="game">mark ii</h3>
-            <p class="winning">84 - 55 - 25 - 58 - 8</p>
-            <p class="machine">3 - 9 - 20 - 10 - 65</p>        
-        </article>
-        <article>
-            <h3 class="game">vag</h3>
-            <p class="winning">31 - 86 - 88 - 45 - 50</p>
-            <p class="machine">34 - 24 - 36 - 67 - 13</p>        
-        </article>
-        <article>
-            <h3 class="game">Enugu</h3>
-            <p class="winning">49 - 87 - 63 - 51 - 35</p>
-            <p class="machine">76 - 11 - 25 - 81 - 8</p>        
-        </article>
-        <article>
-            <h3 class="game">Midweek</h3>
-            <p class="winning">83 - 57 - 11 - 44 - 23</p>
-            <p class="machine"></p>        
-        </article>
-        <article>
-            <h3 class="game">Lucky</h3>
-            <p class="winning">9 - 45 - 15 - 59 - 47</p>
-            <p class="machine">11 - 3 - 73 - 56 - 32</p>        
-        </article>
-    </section>
+        <section aria-label="today result">
+            <h2 class="date">thursday 21/06/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">89 - 14 - 26 - 35 - 18</p>
+                <p class="machine">71 - 29 - 45 - 28 - 50</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">24 - 58 - 59 - 42 - 63</p>
+                <p class="machine">52 - 45 - 11 - 41 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">27 - 61 - 72 - 68 - 26</p>
+                <p class="machine">23 - 5 - 13 - 33 - 47</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">79 - 73 - 60 - 77 - 75</p>
+                <p class="machine">48 - 63 - 21 - 88 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">9 - 70 - 36 - 12 - 55</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">43 - 17 - 75 - 42 - 31</p>
+                <p class="machine">57 - 55 - 46 - 34 - 7</p>        
+            </article>
+        </section>
     </div>
     
     <div class="gameList">
