--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -197,40 +197,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">wednesday 19/06/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">76 - 57 - 19 - 29 - 81</p>
-                <p class="machine">61 - 51 - 49 - 53 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">84 - 55 - 25 - 58 - 8</p>
-                <p class="machine">3 - 9 - 20 - 10 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">31 - 86 - 88 - 45 - 50</p>
-                <p class="machine">34 - 24 - 36 - 67 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">49 - 87 - 63 - 51 - 35</p>
-                <p class="machine">76 - 11 - 25 - 81 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">83 - 57 - 11 - 44 - 23</p>
-                <p class="machine">55 - 68 - 78 - 86 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">9 - 45 - 15 - 59 - 47</p>
-                <p class="machine">11 - 3 - 73 - 56 - 32</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">thursday 21/06/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -255,12 +221,46 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">9 - 70 - 36 - 12 - 55</p>
-                <p class="machine"></p>        
+                <p class="machine">44 - 34 - 27 - 37 - 83</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
                 <p class="winning">43 - 17 - 75 - 42 - 31</p>
                 <p class="machine">57 - 55 - 46 - 34 - 7</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 21/06/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">72 - 80 - 16 - 63 - 60</p>
+                <p class="machine">90 - 71 - 51 - 42 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">51 - 74 - 40 - 85 - 78</p>
+                <p class="machine">36 - 72 - 43 - 75 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">70 - 12 - 76 - 82 - 17</p>
+                <p class="machine">36 - 35 - 61 - 50 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
