--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -896,11 +896,11 @@
                     <td class="winning" id="lbw">55</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">44</td>
+                    <td class="machine">34</td>
+                    <td class="machine">27</td>
+                    <td class="machine">37</td>
+                    <td class="machine" id="lbm">83</td>
                 </tr>
             </tbody> 
 
