--- a/plan.html
+++ b/plan.html
@@ -260,23 +260,16 @@
         </nav>
     </header>
     <main>
-        <p><i>Event to try on DIAMOND on 20/06/2024</i></p>
+        <p><i>Event to try on VAG today Friday 21/06/2024</i></p>
         <div>
             <p class="embed">Twitter Post</p>
-            <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">🎱 Premier Diamond - Monday 20/June/24<br><br>⏳ Closes - 15:25 PM<br><br>Perm: 80 - 58 - 50 - 52 - 27<br><br>Nap: 80 - 58<br><br>Nap: 80 - 50
-                    <a href="https://twitter.com/hashtag/Diamond?src=hash&amp;ref_src=twsrc%5Etfw">#Diamond</a> <a href="https://twitter.com/hashtag/Lotto?src=hash&amp;ref_src=twsrc%5Etfw">#Lotto</a> 
-                    <a href="https://twitter.com/hashtag/BABAIJEBU?src=hash&amp;ref_src=twsrc%5Etfw">#BABAIJEBU</a> 
-                    <a href="https://t.co/osFXr0t764">pic.twitter.com/osFXr0t764</a></p>&mdash; Visual Lotto Board (@visuaLottoBoard) 
-                    <a href="https://twitter.com/visuaLottoBoard/status/1803550165011194064?ref_src=twsrc%5Etfw">June 19, 2024</a>
-                </blockquote> 
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>        
+            <blockquote class="twitter-tweet"><p lang="tl" dir="ltr">🎱 Premier VAG - Friday 21/June/24<br><br>⏳ Closes - 22:25 PM<br><br>Perm: 2 - 61 - 7 - 22 - 79<br><br>Nap: 2 - 61<br><br>Nap: 2 - 22<br><br>Nap 2 - 7<a href="https://twitter.com/hashtag/Vag?src=hash&amp;ref_src=twsrc%5Etfw">#Vag</a> <a href="https://twitter.com/hashtag/Lotto?src=hash&amp;ref_src=twsrc%5Etfw">#Lotto</a> <a href="https://twitter.com/hashtag/BABAIJEBU?src=hash&amp;ref_src=twsrc%5Etfw">#BABAIJEBU</a> <a href="https://t.co/eCNNn4Ik1f">pic.twitter.com/eCNNn4Ik1f</a></p>&mdash; Visual Lotto Board (@visuaLottoBoard) <a href="https://twitter.com/visuaLottoBoard/status/1804207275948585053?ref_src=twsrc%5Etfw">June 21, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      
         </div>
 
         <hr>
         <div style="margin-top: 5rem;">
             <p class="embed">facebook Post</p>
-            <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2FvisuaLottoBoard%2Fposts%2Fpfbid02an4QTD3bzGHkGd4MqjxtkhACgRTaUfHRCbyPw3Jecw5UAvW8HAuLoUAr4de9EMrVl&show_text=true&width=500" width="500" height="266" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>        
+            <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FvisuaLottoBoard%2Fposts%2Fpfbid02gRahniR1gpZfSw7owaBFe67E2dZDsD5BWMjTSL7NwW3zwzCktCmbQkqXTFN2CS4pl&show_text=true&width=500" width="500" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>        
         </div> 
 
 
