--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -248,19 +248,19 @@
                 <p class="machine">36 - 35 - 61 - 50 - 6</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">90 - 33 - 74 - 44 - 21</p>
+                <p class="machine">45 - 35 - 56 - 15 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">90 - 4 - 7 - 82 - 81</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Vag</h3>
+                <p class="winning">36 - 53 - 33 - 52 - 27</p>
+                <p class="machine">84 - 5 - 54 - 66 - 77</p>        
             </article>
         </section>
     </div>
