--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -890,11 +890,11 @@
                     <td class="winning" id="lbw">81</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">80</td>
+                    <td class="machine">48</td>
+                    <td class="machine">17</td>
+                    <td class="machine">58</td>
+                    <td class="machine" id="lbm">20</td>
                 </tr>
             </tbody>
 
