--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -197,40 +197,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">thursday 21/06/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">89 - 14 - 26 - 35 - 18</p>
-                <p class="machine">71 - 29 - 45 - 28 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">24 - 58 - 59 - 42 - 63</p>
-                <p class="machine">52 - 45 - 11 - 41 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">27 - 61 - 72 - 68 - 26</p>
-                <p class="machine">23 - 5 - 13 - 33 - 47</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">79 - 73 - 60 - 77 - 75</p>
-                <p class="machine">48 - 63 - 21 - 88 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">9 - 70 - 36 - 12 - 55</p>
-                <p class="machine">44 - 34 - 27 - 37 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">43 - 17 - 75 - 42 - 31</p>
-                <p class="machine">57 - 55 - 46 - 34 - 7</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 21/06/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -255,12 +221,46 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">90 - 4 - 7 - 82 - 81</p>
-                <p class="machine"></p>        
+                <p class="machine">80 - 48 - 17 - 58 - 20</p>        
             </article>
             <article>
                 <h3 class="game">Vag</h3>
                 <p class="winning">36 - 53 - 33 - 52 - 27</p>
                 <p class="machine">84 - 5 - 54 - 66 - 77</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 22/06/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">3 - 8 - 54 - 69 - 30</p>
+                <p class="machine">64 - 17 - 82 - 35 - 81</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">75 - 41 - 60 - 76 - 38</p>
+                <p class="machine">50 - 81 - 88 - 49 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">64 - 22 - 35 - 76 - 33</p>
+                <p class="machine">62 - 39 - 47 - 78 - 4</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
