result JUNE 22/Saturday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -193,6 +193,7 @@
     <header>
         <nav>
             <a href="/">Home</a>
+            <h1>Daily Result</h1>
         </nav>
     </header>
     <div class="gameResults">
@@ -248,19 +249,19 @@
                 <p class="machine">62 - 39 - 47 - 78 - 4</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">06</h3>
+                <p class="winning">66 - 54 - 80 - 67 - 17</p>
+                <p class="machine">35 - 53 - 81 - 69 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">72 - 60 - 3 - 85 - 25</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">49 - 39 - 64 - 35 - 13</p>
+                <p class="machine">44 - 89 - 78 - 31 - 3</p>        
             </article>
         </section>
     </div>
