--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">friday 21/06/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">72 - 80 - 16 - 63 - 60</p>
-                <p class="machine">90 - 71 - 51 - 42 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">51 - 74 - 40 - 85 - 78</p>
-                <p class="machine">36 - 72 - 43 - 75 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">70 - 12 - 76 - 82 - 17</p>
-                <p class="machine">36 - 35 - 61 - 50 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">90 - 33 - 74 - 44 - 21</p>
-                <p class="machine">45 - 35 - 56 - 15 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">90 - 4 - 7 - 82 - 81</p>
-                <p class="machine">80 - 48 - 17 - 58 - 20</p>        
-            </article>
-            <article>
-                <h3 class="game">Vag</h3>
-                <p class="winning">36 - 53 - 33 - 52 - 27</p>
-                <p class="machine">84 - 5 - 54 - 66 - 77</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 22/06/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">72 - 60 - 3 - 85 - 25</p>
-                <p class="machine"></p>        
+                <p class="machine">41 - 14 - 42 - 88 - 86</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">49 - 39 - 64 - 35 - 13</p>
                 <p class="machine">44 - 89 - 78 - 31 - 3</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 23/06/24</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">70 - 36 - 19 - 66 - 16</p>
+                <p class="machine">85 - 5 - 87 - 50 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">6 - 22 - 41 - 62 - 43</p>
+                <p class="machine">7 - 31 - 51 - 73 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">53 - 48 - 32 - 35 - 76</p>
+                <p class="machine">43 - 45 - 33 - 69 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
