--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -889,11 +889,11 @@
                     <td class="winning" id="lbw">25</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">41</td>
+                    <td class="machine">14</td>
+                    <td class="machine">42</td>
+                    <td class="machine">88</td>
+                    <td class="machine" id="lbm">86</td>
                 </tr>
             </tbody>
 
