--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">43 - 45 - 33 - 69 - 86</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">LUCKY</h3>
+                <p class="winning">3 - 29 - 24 - 81 - 37</p>
+                <p class="machine">51 - 67 - 78 - 53 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">62 - 19 - 31 - 82 - 88</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">82 - 32 - 84 - 50 - 75</p>
+                <p class="machine">14 - 8 - 90 - 77 - 47</p>        
             </article>
         </section>
     </div>
