result JUNE/Monday/2025

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">saturday 22/06/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">3 - 8 - 54 - 69 - 30</p>
-                <p class="machine">64 - 17 - 82 - 35 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">75 - 41 - 60 - 76 - 38</p>
-                <p class="machine">50 - 81 - 88 - 49 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">64 - 22 - 35 - 76 - 33</p>
-                <p class="machine">62 - 39 - 47 - 78 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">66 - 54 - 80 - 67 - 17</p>
-                <p class="machine">35 - 53 - 81 - 69 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">72 - 60 - 3 - 85 - 25</p>
-                <p class="machine">41 - 14 - 42 - 88 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">49 - 39 - 64 - 35 - 13</p>
-                <p class="machine">44 - 89 - 78 - 31 - 3</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 23/06/24</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Aseda</h3>
                 <p class="winning">62 - 19 - 31 - 82 - 88</p>
-                <p class="machine"></p>        
+                <p class="machine">13 - 29 - 16 - 60 - 79</p>        
             </article>
             <article>
                 <h3 class="game">Tota</h3>
                 <p class="winning">82 - 32 - 84 - 50 - 75</p>
                 <p class="machine">14 - 8 - 90 - 77 - 47</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">monday 24/06/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">73 - 72 - 59 - 90 - 44</p>
+                <p class="machine">54 - 77 - 31 - 1 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">87 - 19 - 60 - 62 - 38</p>
+                <p class="machine">72 - 7 - 65 - 85 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">78 - 23 - 35 - 83 - 12</p>
+                <p class="machine">16 - 10 - 76 - 47 - 26</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">26 - 84 - 6 - 5 - 17</p>
+                <p class="machine">60 - 59 - 88 - 23 - 37</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">52 - 55 - 88 - 85 - 21</p>
+                <p class="machine">89 - 65 - 81 - 79 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">13 - 75 - 82 - 49 - 11</p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
