--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -908,11 +908,11 @@
                     <td class="winning" id="lbw">88</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">13</td>
+                    <td class="machine">29</td>
+                    <td class="machine">16</td>
+                    <td class="machine">60</td>
+                    <td class="machine" id="lbm">79</td>
                 </tr>
             </tbody> 
 
