result JUNE 25/Teuesday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 23/06/24</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">70 - 36 - 19 - 66 - 16</p>
-                <p class="machine">85 - 5 - 87 - 50 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">6 - 22 - 41 - 62 - 43</p>
-                <p class="machine">7 - 31 - 51 - 73 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">53 - 48 - 32 - 35 - 76</p>
-                <p class="machine">43 - 45 - 33 - 69 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY</h3>
-                <p class="winning">3 - 29 - 24 - 81 - 37</p>
-                <p class="machine">51 - 67 - 78 - 53 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">62 - 19 - 31 - 82 - 88</p>
-                <p class="machine">13 - 29 - 16 - 60 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">82 - 32 - 84 - 50 - 75</p>
-                <p class="machine">14 - 8 - 90 - 77 - 47</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">monday 24/06/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">13 - 75 - 82 - 49 - 11</p>
                 <p class="machine"></p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 25/06/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">28 - 68 - 24 - 11 - 43</p>
+                <p class="machine">35 - 33 - 14 - 88 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">78 - 74 - 68 - 19 - 87</p>
+                <p class="machine">32 - 70 - 35 - 85 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">67 - 42 - 69 - 80 - 55</p>
+                <p class="machine">7 - 81 - 90 - 44 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">28 - 69 - 64 - 41 - 86</p>
+                <p class="machine">36 - 84 - 67 - 35 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">30 - 75 - 66 - 55 - 25</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">74 - 25 - 2 - 62 - 78</p>
+                <p class="machine">28 - 54 - 48 - 79 - 23</p>        
             </article>
         </section>
     </div>
