result JUNE 26/Wednesday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,18 +250,18 @@
                 <p class="machine">5 - 50 - 81 - 14 - 75</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">84 - 4 - 79 - 30 - 35</p>
+                <p class="machine">58 - 12 - 53 - 80 - 20</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Midweek</h3>
+                <p class="winning">56 - 50 - 57 - 48 - 79</p>
+                <p class="machine">52 - 3 - 16 - 60 - 29</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">47 - 60 - 20 - 41 - 80</p>
                 <p class="machine"></p>        
             </article>
         </section>
